change motivation for section 4.4

--- a/macros.tex
+++ b/macros.tex
@@ -11,6 +11,7 @@
 \newcommand{\outgoing}[1]{#1''}
 \newcommand{\capa}{u}
 \newcommand{\capacity}[1]{u(#1)}
+\newcommand{\average}[1]{\overline{#1}}
 
 \newcommand{\HypergraphDef}{$H = (V,E,c,\omega)$}
 \newcommand{\FlowNetworkDef}{$G = (V',E',c')$}
