--- a/master_thesis/experiments/flow_network/speed_up_flow_network.tex
+++ b/master_thesis/experiments/flow_network/speed_up_flow_network.tex
@@ -2817,44 +2817,44 @@
 \path[clip] (  0.00,  0.00) rectangle (505.89,578.16);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.99] at (  6.82,309.59) {Speed up $\frac{\ExpLawler}{T_X}$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.99] at ( 9 ,309.59) {Speed up relative to (\EdmondKarp,$T_L$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,578.16);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (176.39, 12.80) rectangle (190.62, 27.03);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (166.39, 12.80) rectangle (180.62, 27.03);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,578.16);
 \definecolor[named]{fillColor}{rgb}{0.97,0.46,0.43}
 
-\path[fill=fillColor] (177.10, 13.52) rectangle (189.91, 26.32);
+\path[fill=fillColor] (167.10, 13.52) rectangle (179.91, 26.32);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,578.16);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (264.68, 12.80) rectangle (278.91, 27.03);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (274.68, 12.80) rectangle (288.91, 27.03);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,578.16);
 \definecolor[named]{fillColor}{rgb}{0.00,0.75,0.77}
 
-\path[fill=fillColor] (265.40, 13.52) rectangle (278.20, 26.32);
+\path[fill=fillColor] (275.40, 13.52) rectangle (288.20, 26.32);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,578.16);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (192.42, 17.08) {\GoldbergTarjan};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (182.42, 17.08) {\GoldbergTarjan};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,578.16);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (280.72, 17.08) {\EdmondKarp};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (290.72, 17.08) {\EdmondKarp};
 \end{scope}
 \end{tikzpicture}
