--- a/master_thesis/sections/conclusion.tex
+++ b/master_thesis/sections/conclusion.tex
@@ -1,44 +1,63 @@
-In this thesis, we developed a novel \emph{local search} technique based on \emph{Max-Flow-Min-Cut}
-computations for multilevel hypergraph partitioning. We integrated our \emph{flow}-based
-refinement framework into the $n$-level hypergraph partitioner \emph{KaHyPar} and show that
-in combination with the \emph{FM} heurisitc our new approach produces the best-known partitions
+In this thesis, we present a novel \emph{local search} technique based on \emph{Max-Flow-Min-Cut}
+computations for multilevel hypergraph partitioning. We have integrated our \emph{flow}-based
+\emph{local search} algorithm into the $n$-level hypergraph partitioner \emph{KaHyPar} and show that
+in combination with the \emph{FM} heurisitc our new approach produces the best partitions
 for a wide range of applications.\\
-On the road to a practical implementation, we developed several concepts to speed up flow
-computations on a flow network of a hypergraph (see Section \ref{sec:related_lawler}).
-One is to remove low-degree hypernodes from the network and instead insert a clique 
-between all incident hyperedge nodes. We show that the number of nodes and edges could
-be reduced if the degree of a hypernode is smaller or equal than $3$. Further, we model a hyperedge
-of size $2$ as an undirected flow edge. We combine both techniques in a \emph{Hybrid}-Network 
+On the road to a practical implementation, we introduce several techniques to 
+sparsify the state-of-the-art hypergraph flow network representation \cite{lawler1973}. 
+The network consists of many edges with \emph{infinite} capacity. We present
+several theoretical results, which allows us to remove such edges or even to remove
+nodes, if all \emph{incoming} and \emph{outgoing} edges have a capacity equal to
+\emph{infinity}. The results are of independent interest, because they are also
+applicable on general flow networks with \emph{infinite} capacity edges. 
+As a consequence, we can remove all hypernodes from the flow network 
+of a hypergraph. However, the removal of a hypernode in the flow 
+network introduce new edges between all incident nodes, which number depends
+on the degree of the vertex. We show that we can minimize the number of edges, if the
+degree of a hypernode is smaller than or equal to $3$. Further, we show that each weighted undirected
+graph can be modeled as a weighted directed graph with the same \emph{min-cut}
+property. The transformation introduces new nodes and edges in the corresponding
+weighted directed graph. However, we have shown that the transformation of an undirected
+edge results in the same structure as the transformation of hyperedges of size $2$
+in the hypergraph flow network. As a consequence, we can model each hyperedge $e$ with
+$|e| = 2$ as a undirected flow edge. We combine both techniques in a \emph{Hybrid}-Network 
 and show that maximum flow algorithms are up to a factor of $3$ faster compared to
-the execution on the \emph{Lawler}-Network \cite{lawler1973} on real-world benchmarks. \\
+the execution on the \emph{Lawler}-Network \cite{lawler1973} on real-world hypergraph benchmarks. \\
 Our \emph{flow}-based refinement framework is based on the ideas of Sanders and Schulz
-\cite{sanders2011engineering} (developed for multilevel graph partitioning). Given an already bipartitioned
-hypergraph, we show how to configure the source and sink sets of the flow network 
-of a subhypergraph such that a \emph{Max-Flow-Min-Cut} computation yields a cut smaller 
-or equal than the cut before on the original hypergraph. Further, we extended the source
-and sink sets with additional nodes such that we can calculate the cut of hypergraph $H$
-after a \emph{Max-Flow-Min-Cut} computation with the help of the amount of a maximum $(S,T)$-flow
-on a subhypergraph $H_{V'}$ in constant time. Additionally, we explain how one can find all 
+\cite{sanders2011engineering} (developed for multilevel graph partitioning). However,
+we generalize many results such that they are applicable on hypergraph partitioning.
+We show how one can improve a given bipartition of a hypergraph by executing
+a \emph{Max-Flow-Min-Cut} computation only on a subhypergraph. 
+Further, if we use the \emph{FM} heuristic, the value of the cut after moving a node from one 
+block to another can be calculated with the gain value of the move and the cut before.
+We show how the source and sink set of the corresponding flow problem can be modeled such 
+that the value of the cut of the improved bipartition can be calculated with the value 
+of a maximum $(S,T)$-flow. Additionally, we explain how one can find all 
 minimum $(s,t)$-cutsets with one maximum $(s,t)$-flow calculation on hypergraphs. \\
 We integrated our framework into the $n$-level hypergraph partitioner
-\emph{KaHyPar}. A \emph{flow}-based refinement is executed in $\log{n}$ levels of the multilevel
-hierarchy between each adjacent block in the quotient graph. The pairwise block scheduling 
-refinement is implemented in rounds and terminates if no hypernode changed its block in a round.
+\emph{KaHyPar}. We embed our \emph{flow}-based \emph{local search} algorithm into 
+an \emph{active block scheduling} refinment strategy. The algorithm works in rounds and in
+each round we start a \emph{flow-based} refinement between each adjacent block. The
+algorithm terminates if no hypernode changed its block in a round. The flow problem
+is build around the cut of two adjacent blocks.
 The sizes of the flow problems are chosen adaptively. If a \emph{flow} computation on two blocks
-yields an improvement the flow problem size is increased, otherwise it is decreased. 
+yields an improvement, we increase the flow problem size, otherwise we decrease it. 
 Additionally, we try to automatically balance the partition after \emph{Max-Flow-Min-Cut}
-computation by iterating over each minimum $(S,T)$-cutset. In the remaining levels, 
-where no flow is performed, the classical \emph{FM} heuristic is used to improve the quality 
+computation by using the \emph{Most Balanced Minimum Cut} heuristic. The \emph{active block
+scheduling} refinement is executed in $\log{n}$ levels of the multilevel hierarchy.
+In the remaining levels, where no flow is performed, 
+the classical \emph{FM} heuristic is used to improve the quality 
 of a partition. An observation during implementation was that only a minority of 
-the \emph{Max-Flow-Min-Cut} computations leads to an improvement of quality. 
+the \emph{Max-Flow-Min-Cut} computations leads to an improvement in quality. 
 Therefore, we implement several speed-up heuristics which prevents the
-execution of additional pairwise \emph{flow} refinements. \\
-Our new quality configuration \KaHyPar{MF} produced on $95\%$ of our benchmark instances
-better partitions than our old baseline configuration \KaHyPar{CA}. On average the solution 
-quality is $2\%$ better and only within a factor of $2$ slower. In comparison with other 
-state-of-the-art hypergraph partitioners, \KaHyPar{MF} produced on $70\%$ of the benchmark instances
-the best-known partitions with a running time comparable to the direct $k$-way implementation
-of \emph{hMetis}.
+execution of unpromising pairwise \emph{flow} refinements. \\
+The new configuration \KaHyPar{MF} produces on $95\%$ of our benchmark instances
+better partitions than our old configuration \KaHyPar{CA}. On average the solution 
+quality is $2\%$ better, while only incurring a slowdown by a factor of $2$. 
+In comparison with $5$ different state-of-the-art hypergraph partitioners, \KaHyPar{MF} 
+produces on $70\%$ of $3222$ benchmark instances the best partitions. 
+Moreover, our partitioner has a comparable running time to the direct $k$-way
+version of \emph{hMetis} and outperforms it on $82\%$ of the benchmark instances.
 
 
 \subsection{Future Work}
